fixed spacing in css

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,8 @@ body {
     border: 10px;
     border-radius: 10px;
     padding: 50px;
+    margin-top: 300px;
+    align-items: center;
 
 }
 
@@ -28,8 +30,9 @@ body {
     font-size: 60px;
     border-radius: 20px;
     align-items: center;
+    margin-top: 300px;
 }
 
 #timer{
-    align-
+    
 }
